[cs-ui] Safari Fix - Fixed CSAlert, Lightning Icons search bar and .code-snippet height collapsing due to display: flex and undefined heights

--- a/cs-ui-components/src/sass/components/_cs-alert.scss
+++ b/cs-ui-components/src/sass/components/_cs-alert.scss
@@ -1,7 +1,5 @@
 .cs-alert {
-	display: inline-flex;
-	justify-content: center;
-	align-items: center;
+	display: inline-block;
 	position: relative;
 	text-align: center;
 	padding: 0.5rem 2rem 0.5rem 1rem;
